[package]
name = "tinymist-vfs"
description = "Vfs for tinymist."
# group: world
version = "0.14.6"
authors.workspace = true
license.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]

comemo.workspace = true
ecow.workspace = true
indexmap.workspace = true
log.workspace = true
nohash-hasher.workspace = true
parking_lot.workspace = true
rpds = "1"
tinymist-std = { workspace = true, features = ["typst"] }
typst.workspace = true

wasm-bindgen = { workspace = true, optional = true }
web-sys = { workspace = true, optional = true, features = ["console"] }
js-sys = { workspace = true, optional = true }

[features]

web = ["wasm-bindgen", "web-sys", "js-sys", "tinymist-std/web"]
browser = ["web"]
system = ["tinymist-std/system"]

[lints]
workspace = true
